assets/style.css
body{
    font-family: 'Times New Roman', Times, serif;
    background: #FFFFFF;
  }

  html, body {
    width: 100%;
    height: auto;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden; 
}

  
  /*MOBILE VERSION*/
  #second_container{
    padding:0px;
  }

  #nav_row{
    margin-left: -30px;
    margin-right: -30px;
  }
  
  /*navbar*/
  
  .navbar {
    padding: 0px 0;
  }
  
  #navbar_logo {
    font-size: 20px;
    height: 60px;
    padding-left: 0px;
    margin: 15px 20px;
  }
  
  
  #navbar_supported_content {
    position: absolute;
    z-index: 1;
    width: 100%;
    top: 100px;
    left: 0px;
  }
  
  .navbar-nav{
    text-align: center;
  }
  
  .navbar-toggler-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(223,98,27)' stroke-width='4' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
    font-size: 25px;
    color: #DF621B;
    margin-right: 20px;
  }
  
  
  
  .nav-menu{
    font-size: 18px;
    padding-bottom: 7px;
    padding-top: 7px;
    margin-bottom: 5px;
  }
  
  .nav-mobile-hidden-menu{
    display: none;
  }
  
  
  ul{
    width: 100%;
    margin: auto;
    padding: 0px;
    background-color: #e4e9ec ;
    text-align: center;
    display: none;
    font-family: sans-serif;
    padding-bottom: 5px;
  }
  
  ul li{
    list-style: none;
    display: block;
    padding: 20px;
    padding-bottom: 0px;
    color: #000000;
    text-align: center;
  }
  
  
  ul li a{
    text-decoration: none;
    color: #000000;
  
  
  }
  
  ul li:hover{
    background-color:  #DF621B ;
    cursor: pointer;
  }
  
  ul li a:hover{
    text-decoration: none;
    color: #f5f5f5;
  }

  /*banner*/

.banner-section{
    background-color: #f5f5f5;
    display: flex;
    flex-wrap: wrap;
    height: auto;
  }
  
  #banner_pic{
    
    padding-top: 10px;
    padding-left: 0px;
    padding-bottom: 5px;
    height: 150px;
  }
  
  #banner_quote{
    padding-left: 0px;
    line-height: 1.2;
    padding-top: 35px;
    padding-right: 0px;
  }
  
  #first_large_text{
    font-size: 24px;
    text-indent: 3px;
  }
  
  .large-text{
    font-size: 24px;
    text-indent: 3px;
    padding-left: 8px;
  }
  
  .small-text{
    font-size: 21px;
    color: #3d3d3d;
  }

  /*product 1,2,3*/


  
  .product-image{
    padding: 25px 15px 0px 15px;
    display: flex;
    justify-content: center;
  
  }
  
  .product{
    border-radius: 50%;
    height: 130px;
    width: 130px;
  }
  
  .product-header{
    color: #FFFFFF;
    text-align: center;
    padding-top: 10px;
    font-size: 25px;
  }
  
  .product-quote{
    color: #FFFFFF;
    text-align: center;
    font-size: 15px;
    padding-bottom :20px;
    margin-bottom: 0px;
    padding-top: 0px;
    font-family: sans-serif;
  }
  
   /*product 1*/
  .product-1-section{
    background-color: #F57910;
    border-top: 30px solid transparent;
    border-right: 30px solid transparent;
    border-left: 30px solid transparent;
    background-clip:padding-box;
    width: 100%;
  }
  
  /*product 2*/
  .product-2-section{
    background-color: #3FC5E1;
    border-top: 30px solid transparent;
    border-right: 30px solid transparent;
    border-left: 30px solid transparent;
    background-clip:padding-box;
  }
  
  /*product 3*/
  .product-3-section{
    background-color: #709503;
    border-top: 30px solid transparent;
    border-right: 30px solid transparent;
    border-left: 30px solid transparent;
    background-clip:padding-box;
  }

  /*heading, text, button, after product pictures*/


#pet_heading{
  font-size: 28px;
  text-align: center;
  color: #23BFE5;
  line-height: 1.6;
  padding-top: 50px;
  font-family: 'Arial Narrow', Arial, 'sans-serif';
}

#pet_content{
  text-align: center;
  font-size: 10px;
  padding-top: 10px;
  line-height: 2;
  padding-left: 6px;
  padding-right: 6px;
  font-family: 'sans-serif';
}

#read_more_button{
  background-color: #F57910;
  font-size: 13px;
  padding: 10px 20px;
  border-radius: 5px;
  font-family: sans-serif;
  border-style: none;
  color: #FFFFFF;
}


#button_container{
  display: flex;
  justify-content: center;
  padding-top: 10px;
}

/*picture above footer*/

#above_footer_container{
  display: flex;
  justify-content: center;
  padding-bottom: 0px;

}

#image_above_footer{
  font-size: 10px;
  height: 250px;
}


/*footer*/
footer{
  background-color: #f5f5f5;
  margin-top: 50px;
  padding-top: 30px;
}

#logo_above_footer{
  display: flex;
  justify-content: center;
  
}

#last_logo{
  height: 80px;
}

#address{
  display: flex;
  justify-content: center;
  flex-direction: column;
  text-align: center;
  font-size: 16px;
  margin-top: 45px;
  line-height: 1.8;
}

#address_part_one{
  padding-bottom: 0px;
  margin-bottom: 0px;
  margin-top: 0px;
  padding-top: 0px;
}

#address_part_two{
  padding-top: 0px;
  padding-bottom: 0px;
  margin-bottom: 0px;
  margin-top: 0px;
  display: flex;
  flex-direction: column;
}


#copyright{
  background-color: #F55110;
  display: flex;
  justify-content: center;
  font-size: 20px;
  padding: 13px 0px;
  color: #FFFFFF;
  margin-top: 20px;
  
}

@media (min-width:370px){
  
#banner_pic{
  height: 170px;
}

#first_large_text{
  font-size: 25px;
}

.large-text{
  font-size: 25px;
}

.small-text{
  font-size: 22px;
}

.nav-menu{
  padding-bottom: 10px;
  padding-top: 10px;
  margin-bottom: 4px;
}

#pet_content{
  padding-left: 5px;
  padding-right: 5px;
  font-size: 12px;
}

}
/* ... */

